fix blurry images

--- a/src/ImgGallery/ImgGallery.css
+++ b/src/ImgGallery/ImgGallery.css
@@ -9,10 +9,18 @@
 }
 
 .display-section {
-    margin-top: 20vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;    
+    padding: 48px;
+    box-sizing: border-box;
+}
+
+.display-section img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .close {
@@ -52,4 +60,5 @@
     box-shadow: 0 1px 1px 2px rgba(0,0,0, .15);
     border-radius: 10px;
     width: 100%;
+    height: auto;
 }
